# WebComparator

./: Auth.hs  Edit.hs  LICENSE  PhonData.hs  Query.hs  README  Setup.hs  Site.hs  Tangkhul3.db  install.sh  webcomparator.cabal
Data/: Phonology.hs
Network/: JQGrid.hs
data/: Tangkhul3.db  WebCompBorderlands.sqlite
html/: index.html
html/css/: webcomparator.css
html/js/: jquery.jqGrid.min.js  webcomparator.js
